Add environment variable configurations for Vite and Docker; include deployment scripts and Nginx setup

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,6 @@
-REACT_APP_API_URL=http://localhost:3001/api
+# Variables de entorno para Vite (deben empezar con VITE_)
+# Para desarrollo local:
+VITE_BACKEND_URL=http://localhost:3001
+
+# Nota: En Docker no se necesita esta variable porque nginx hace el proxy
+
