--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@7.1.14",
+    "msw": "^1.2.3"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
