feat(security): implement secure configuration system
- Add .env.example for backend and frontend
- Add .env.production.example for deployments
- Create CONFIGURACION_ENV.md with team instructions
- Update backend and frontend .gitignore to protect environment variables
- Remove credentials from repository

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,29 +1,18 @@
-# Variables de entorno para el frontend (Vite)
-# IMPORTANTE: Las variables DEBEN empezar con VITE_ para que Vite las reconozca
+# Backend API Configuration
+VITE_API_URL=http://localhost:3000/api
 
-# ====================
-# DESARROLLO LOCAL
-# ====================
-# Usar esta configuración cuando ejecutes con 'npm run dev':
-VITE_BACKEND_URL=http://localhost:3001
+# Environment
+VITE_NODE_ENV=development
+# MongoDB Configuration
+# Para desarrollo local, usa MongoDB local o tu propia instancia de Atlas
+MONGODB_URI=mongodb://localhost:27017/mood-playlist-app
 
-# ====================
-# DOCKER
-# ====================
-# Cuando uses Docker Compose, el backend es accesible como 'http://backend:3001'
-# NO cambies este valor aquí, Docker lo sobrescribirá automáticamente
+# Server Configuration
+PORT=3000
+NODE_ENV=development
 
-# ====================
-# PRODUCCIÓN (con dominio)
-# ====================
-# Si tienes un dominio personalizado (name.com, etc):
-# VITE_BACKEND_URL=https://tudominio.com
-# O si backend está en subdominio:
-# VITE_BACKEND_URL=https://api.tudominio.com
-
-# ====================
-# CLOUDFLARE TUNNEL
-# ====================
-# Si usas Cloudflare Tunnel, pon la URL del backend:
-# VITE_BACKEND_URL=https://tu-tunnel.trycloudflare.com
+# API Keys (para futuras integraciones)
+# Obtén tus credenciales en https://developer.spotify.com/
+SPOTIFY_CLIENT_ID=tu_client_id_aqui
+SPOTIFY_CLIENT_SECRET=tu_client_secret_aqui
 
