--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,6 +7,11 @@ package-lock.json
 .env.local
 .env.*.local
 
+# Permitir archivos de ejemplo
+!.env.example
+!.env.production.example
+!.env.docker
+
 # Logs
 logs/
 *.log
