--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -13,12 +13,12 @@ dist-ssr
 *.local
 
 # Environment variables
+.env
 .env.local
 .env.production.local
 .env.*.local
 
 # Permitir estos archivos de configuración
-!.env
 !.env.example
 !.env.docker
 !.env.production.example
