feat: implement user authentication and JWT middleware, refactor routes and services

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,11 @@ MONGODB_URI=mongodb://localhost:27017/mood-playlist-app
 PORT=3000
 NODE_ENV=development
 
+# JWT Configuration
+# Genera un secreto seguro con: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=tu_secreto_super_seguro_cambialo_en_produccion
+JWT_EXPIRES_IN=7d
+
 # API Keys (para futuras integraciones)
 # Obtén tus credenciales en https://developer.spotify.com/
 SPOTIFY_CLIENT_ID=tu_client_id_aqui
