--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,18 @@
-# Puerto del servidor
-PORT=3001
+# MongoDB Configuration
+# Para desarrollo local, usa MongoDB local o tu propia instancia de Atlas
+MONGODB_URI=mongodb://localhost:27017/mood-playlist-app
 
-# URL del Frontend para CORS
-FRONTEND_URL=http://localhost:5173
-
-# Entorno (development, production)
+# Server Configuration
+PORT=3000
 NODE_ENV=development
-# URL del API Backend
-VITE_API_URL=http://localhost:3001
 
-# VITE_API_URL=https://tu-backend-produccion.com
+# JWT Configuration
+# Genera un secreto seguro con: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=tu_secreto_super_seguro_cambialo_en_produccion
+JWT_EXPIRES_IN=7d
+
+# API Keys (para futuras integraciones)
+# Obtén tus credenciales en https://developer.spotify.com/
+SPOTIFY_CLIENT_ID=tu_client_id_aqui
+SPOTIFY_CLIENT_SECRET=tu_client_secret_aqui
 
