--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           ref: docker
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -41,8 +44,8 @@ jobs:
 
       - name: Build and push images
         run: |
-          docker-compose build
-          docker tag playthemood-frontend falbmun0906/frontend:latest
-          docker tag playthemood-backend falbmun0906/backend:latest
+          docker compose build
+          docker tag playthemood-frontend falbmun0906/playthemood-frontend:latest
+          docker tag playthemood-backend falbmun0906/playthemood-backend:latest
           docker push falbmun0906/playthemood-frontend:latest
           docker push falbmun0906/playthemood-backend:latest
