--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "test:ci": "newman run tests/postman/PlayTheMood.postman_collection.json -e tests/postman/PlayTheMood.postman_environment.json --bail"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "has-tostringtag": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
