--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -3,7 +3,7 @@ server {
 
     # Proxy para todas las rutas de la API
     location /api/ {
-        proxy_pass http://playthemood-backend-latest:10000;
+        proxy_pass https://playthemood-backend-latest.onrender.com;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -23,4 +23,3 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 }
-
