feat: update API endpoints for production; configure Nginx proxy and adjust Docker settings

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -3,12 +3,16 @@ server {
 
     # Proxy para todas las rutas de la API
     location /api/ {
-        proxy_pass https://playthemood-backend-latest.onrender.com;
+        proxy_pass https://playthemood-backend-latest.onrender.com/api/;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
+        proxy_set_header Host playthemood-backend-latest.onrender.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Content-Type $content_type;
+        proxy_set_header Content-Length $content_length;
+        proxy_pass_request_body on;
+        proxy_ssl_server_name on;
     }
 
     # Rutas del frontend
